# Raft_Algorep

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  main.cc  run.sh
include/: client.hh  server.hh
res/: run.sh
src/: client.cc  main.cc  server.cc
src/config/: globalConfig.cc  globalConfig.hh
src/rpc/: appendEntries.cc  appendEntries.hh  controllerRequest.cc  controllerRequest.hh  message.cc  message.hh  requestClient.cc  requestClient.hh  requestLeader.cc  requestLeader.hh  requestVote.cc  requestVote.hh  rpc.cc  rpc.hh  rpcResponse.cc  rpcResponse.hh
src/runners/: node.cc  node.hh
src/runners/client/: client.cc  client.hh
src/runners/controller/: controller.cc  controller.hh
src/runners/node/: entry.cc  entry.hh
src/runners/node/cycle/: candidateCycle.cc  candidateCycle.hh  cycle.cc  cycle.hh  followerCycle.cc  followerCycle.hh  fwd.hh  leaderCycle.cc  leaderCycle.hh
src/utils/: clock.cc  clock.hh  string.hh
src/wrappers/: mpi_include.cc  mpi_include.hh  nlhomann_include.cc  nlhomann_include.hh
src/wrappers/debug/: add_stack_strace.cc  add_stack_strace.hh  print_log.cc  print_log.hh
src/wrappers/mpi/: rpcRecieverReinjecter.cc  rpcRecieverReinjecter.hh
tests/: crash_follower.cmd  multiple_cmd_begining.cmd  new_leader_election.cmd  simple_1_entry.cmd  test.sh  test_all.sh
